# Modular-Middleware-for-SUI

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  js_performance.json  python_performance.json
archive/: js_performance.json  python_performance.json
archive/performance_results/: performance_results.json
benchmark_results/: all_benchmarks.json  benchmark_appendix.tex  performance_chapter.tex
benchmark_results_100_iter/: benchmark_summary.txt  refactored_benchmarks.json
docs/: security-model.md
flight_insurance_contract/flight_insurance/: Move.toml
flight_insurance_contract/flight_insurance/sources/: flight_insurance.move  policy.move
flight_insurance_contract/flight_insurance/tests/: flight_insurance_tests.move
performance_results/: performance_metrics.json
src/: config.rs  lib.rs  main.rs
src/conditions/: time.rs
src/demo/: mod.rs  weather.rs
src/examples/: enhanced_flight_insurance.rs  flight_delay.rs  flight_insurance.rs  mod.rs
src/execution/: fallback.rs  manager.rs  mod.rs
src/languages/: javascript.rs  mod.rs  python.rs
src/metrics/: mod.rs  performance.rs  storage.rs
src/quorum/: mod.rs  simulation.rs
src/security/: audit.rs  byzantine_simulator.rs  config.rs  mod.rs  model.rs  property_tests.rs  verification.rs
src/sui/: byzantine.rs  client.rs  contract.rs  cross_chain.rs  mod.rs  network.rs  tracker.rs  types.rs  verification.rs
src/tests/: mod.rs  performance_tests.rs  security_tests.rs
src/tools/: benchmark_suite.rs  flight_data_generator.py  mod.rs  performance_analyzer.py  visualize_performance.py
src/transaction/: handler.rs  mod.rs  sequencing.rs  types.rs  utils.rs
verification_contract/: Move.toml
