[package]
name = "suimodular"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
ed25519-dalek = "1.0.1"
base64 = "0.13"
anyhow = "1.0"
bcs = "0.1"
rand = "0.7.3"
rand_core = "0.5.1"
bip39 = "1.0"
futures = "0.3"
boa_engine = "0.17"
pyo3 = { version = "0.18", features = ["auto-initialize"] }
websocket = "0.26.4"
chrono = { version = "0.4", features = ["serde"] }
cached = "0.42.0"
dotenv = "0.15.0"
oauth2 = "4.3.0"
log = "0.4"
env_logger = "0.9"
async-trait = "0.1"
md5 = "0.7"
hex = "0.4"