[package]
name = "suimodular"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
ed25519-dalek = "1.0.1"
base64 = "0.13"
anyhow = "1.0"
bcs = "0.1"
rand = "0.7.3"
rand_core = "0.5.1"
futures = "0.3"
boa_engine = "0.17"
pyo3 = { version = "0.18", features = ["auto-initialize"] }
websocket = "0.26.4"
chrono = { version = "0.4", features = ["serde"] }
cached = "0.42.0"
dotenv = "0.15.0"
oauth2 = "4.3.0"
log = "0.4"
env_logger = "0.9"
async-trait = "0.1"
md5 = "0.7"
hex = "0.4"
clap = "2.33.0"
thiserror = "1.0.0"


# Use commit hash "6561c0d17519" for all Sui dependencies.
sui-sdk = { git = "https://github.com/MystenLabs/sui.git", rev = "6561c0d17519", package = "sui-sdk" }
sui-types = { git = "https://github.com/MystenLabs/sui.git", rev = "6561c0d17519" }
shared-crypto = { git = "https://github.com/MystenLabs/sui.git", rev = "6561c0d17519" }
sui-move-build = { git = "https://github.com/MystenLabs/sui.git", rev = "6561c0d17519" }

# Commented out fastcrypto dependency as it's not needed with the restored config logic
# fastcrypto = "0.10" 
# Add blake2 dependency (use version 0.10 based on docs.rs)
blake2 = "0.10"

proptest = { version = "1.6.0", features = ["alloc"] }
sha2 = "0.10.6"
